--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,3 +12,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container-title{
+  font-size: 3rem;
+  color: #111;
+  text-align: center;
+  line-height: 1.2;
+  margin-bottom: 0.5rem;
+}
+.container-m{
+  margin-bottom: 3rem;
+}
