Team Member Update

--- a/client/src/style/Responsive.css
+++ b/client/src/style/Responsive.css
@@ -8,19 +8,19 @@
     }
     .navbar-nav{
         position: absolute;
-        display: none !important;
-        height: 100vh;
+        height: 430px;
         flex-direction: column;
         background-color: black;
         padding: 20px 0;
-        width: 60%;
-        top: 0%;
-        right: -100%;
+        width: 100%;
+        left: 0%;
+        opacity: 0.9;
+        top: -800%;
         z-index: 1;
     }
     .navbar-nav.show{
         display: flex !important;
-        right: 0%;
+        top: 0%;
     }
     .hamburger {
         display: block !important;
@@ -58,6 +58,9 @@
     .welcome>div{
         width: 100% !important;
     }
+    .left-side{
+        padding: 20px 20px !important;
+    }
 
     /* Service Card Responsive */
     .card-body{
@@ -86,6 +89,11 @@
     /* Founder Section Responsive */
     .col-4{
         width: 100% !important;
+        margin-top:1.3rem !important ;
+        padding: 0 !important;
+    }
+    .py-6 {
+        padding: 1rem !important;
     }
 
     /* Blogs Responsive */
@@ -122,13 +130,23 @@
 }
 
 /* Width 365 */
-@media(max-width:365px){
+@media(max-width:565px){
     .container-title{
         font-size: 28px !important;
         margin-bottom: 4px !important;
     }
     .container-m{
         margin-bottom: 1rem !important;
+        margin-top: 1.5rem;
+    }
+    .p-5{
+        padding: 1rem !important;
+    }
+    .display-5{
+        font-size: 2rem !important;
+    }
+    .display-4{
+        font-size: 2rem !important;
     }
     /* Navbar Making Responsive */
     .navbar{
@@ -274,26 +292,49 @@
     /* Request Quote Responsive */
     .request>div{
        width: 100% !important;
+       padding: 1rem !important;
     }   
-    
+    .text{
+        padding: 1rem !important;
+    }
+    .text h1{
+        font-size: 1.5rem !important;
+    }
+    .text p{
+        font-size: 0.8rem !important;
+    }
+    .col-6{
+        width: 100% !important;
+    }
+    .col-6 input{
+        font-size: 0.7rem !important;
+    }
+    .btn{
+        font-size: 0.8rem !important;
+    }
     /* Founder Section Responsive */
     .col-4{
         width: 100% !important;
+        margin-top:1.3rem !important ;
+        padding: 0 !important;
     }
     .image{
-        width: 150px !important;
-        height: 150px !important;
+        width: 200px !important;
+        height: 200px !important;
     }
     .text-data .name{
-        font-size: 16px !important;
+        font-size: 20px !important;
     }
     .text-data .job{
         font-size: 12px !important;
     }
     .media-buttons .link{
-        width: 20px !important;
-        height: 20px !important;
-        font-size: 10px !important;
+        width: 35px !important;
+        height: 35px !important;
+        font-size: 18px !important;
+    }
+    .py-6 {
+        padding: 1rem !important;
     }
 
     /* Blogs Responsive */
@@ -304,6 +345,16 @@
     /* Contact Section Responsive */
     .col-lg-6{
         width: 100% !important;
+    }
+
+    /* Update Section Responsive */
+    .input-group .form-control{
+        padding: 0 !important;
+        font-size: 0.8rem !important;
+        padding-left: 0.7rem !important;
+    }
+    .btn-dark{
+        font-size: 0.8rem !important;
     }
     /* Footer Section Responsive  */
     .footer{
