--- a/client/src/style/Team.css
+++ b/client/src/style/Team.css
@@ -37,6 +37,16 @@
     border-radius: 24px 24px 0 0;
     background-color: #4070f4;
 }
+.team-card::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 36%;
+    width: 100%;
+    border-radius: 24px 24px 0 0;
+    background-color: #039be5;
+}
 
 .image{
     position: relative;
