--- a/client/src/style/Responsive.css
+++ b/client/src/style/Responsive.css
@@ -8,6 +8,7 @@
     }
     .navbar-nav{
         position: absolute;
+        justify-content: start !important;
         height: 430px;
         flex-direction: column;
         background-color: black;
@@ -19,7 +20,6 @@
         z-index: 1;
     }
     .navbar-nav.show{
-        display: flex !important;
         top: 0%;
     }
     .hamburger {
@@ -37,7 +37,6 @@
         margin-bottom: 1rem !important;
     }
     .nav-item{
-        display: block;
         color: #fff !important;
         margin: 20px auto !important;
     }
@@ -63,7 +62,7 @@
     }
 
     /* Service Card Responsive */
-    .card-body{
+    .card_body{
         width: 100% !important;
     }
 
@@ -113,7 +112,7 @@
         padding: 1.5rem !important;
     }
     .footer .col-6{
-        width: 100% !important;
+        width: 50% !important;
         text-align: center;
         margin-bottom: 1.5rem;
     }
@@ -126,6 +125,17 @@
     }
    .sign i{
         display: none;
+   }
+   .my-2{
+    margin-right: 2rem !important;
+   }
+   .col-6 p{
+    text-align: left;
+    margin-left: 7rem !important;
+   }
+   .footer ul{
+    text-align: left;
+    margin-left: 7rem !important;
    }
 }
 
@@ -160,13 +170,11 @@
     }
     .navbar-nav{
         position: absolute;
-        display: none !important;
-        height: 100vh;
         flex-direction: column;
         background-color: black;
         padding: 20px 0;
         width: 100%;
-        top: -200%;
+        top: -800%;
         right: 0%;
         z-index: 1;
     }
@@ -174,7 +182,6 @@
         font-size: 20px !important;
     }
     .navbar-nav.show{
-        display: flex !important;
         top: 0%;
     }
 
@@ -238,7 +245,7 @@
     }
 
     /* Service Card Responsive */
-    .card-body{
+    .card_body{
         width: 100% !important;
         height: auto !important;
         padding: 18px 10px !important;
@@ -380,6 +387,17 @@
     }
    .sign i{
         display: none;
+   }
+   .my-2{
+    margin-right: 2rem !important;
+   }
+   .col-6 p{
+    text-align: left;
+    margin-left: 5rem !important;
+   }
+   .footer ul{
+    text-align: left;
+    margin-left: 5rem !important;
    }
    .text-blue-500{
     font-size: 16px !important;
