--- a/client/src/style/Card.css
+++ b/client/src/style/Card.css
@@ -30,12 +30,13 @@
     display: flex;
     height: 350px;
     box-sizing: border-box;
-    width: 444px;
+    /* width: 444px; */
     overflow: hidden;
     flex-direction: column;
     justify-content: center;
     align-items: center; 
     transition: all 0.5s ease;
+    padding: 45px 10px;
 }
 .card-title{
     color: var(--black);
