--- a/client/src/style/Card.css
+++ b/client/src/style/Card.css
@@ -14,7 +14,7 @@
     background-color: var(--primary-color);
 }
 .card-body:hover .card-img {
-    background-color: #F6F6F6;
+    background-color: #111;
 }
 .card-body:hover .card-desc{
    color:  #fff;
@@ -53,7 +53,7 @@
     margin-bottom: 1.5rem;
 }
 .card-img>i{
-    color: #fff;
+    color: #111;
     font-size: 35px;
 }
 .card-desc{
